--- a/vervex/package.json
+++ b/vervex/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^3.0.0-beta.6",
     "icons": "^1.0.0",
+    "modules": "^0.4.0",
+    "node": "^20.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
