--- a/vervex/package.json
+++ b/vervex/package.json
@@ -7,11 +7,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^3.0.0-beta.6",
-    "framer-motion": "^10.12.16",
-    "gsap": "^3.12.1",
     "icons": "^1.0.0",
     "modules": "^0.4.0",
     "node": "^20.2.0",
+    "node-modules": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
