--- a/vervex/package.json
+++ b/vervex/package.json
@@ -3,23 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
+    "@react-three/drei": "^9.77.1",
+    "@react-three/fiber": "^8.13.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^3.0.0-beta.6",
+    "framer-motion": "^10.12.16",
     "gsap-trial": "^3.12.1",
     "icons": "^1.0.0",
+    "maath": "^0.6.0",
     "modules": "^0.4.0",
     "node": "^20.2.0",
     "node-modules": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-inlinesvg": "^3.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.13.0",
     "react-scripts": "^5.0.1",
     "react-scroll-parallax": "^3.4.2",
     "react-spring": "^9.7.1",
+    "react-tilt": "^1.0.2",
+    "react-vertical-timeline-component": "^3.6.0",
     "swiper": "^9.3.2",
     "web-vitals": "^2.1.4"
   },
@@ -48,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "tailwindcss": "^3.3.2",
     "webpack-cli": "^5.1.4"
   }
 }
