--- a/vervex/package.json
+++ b/vervex/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^3.0.0-beta.6",
     "framer-motion": "^10.12.16",
+    "gsap": "^3.12.1",
     "gsap-trial": "^3.12.1",
     "icons": "^1.0.0",
     "maath": "^0.6.0",
